[package]
name = "modalkit"
version = "0.0.12"
edition = "2018"
authors = ["Ulyssa <git@ulyssa.dev>"]
repository = "https://github.com/ulyssa/modalkit"
homepage = "https://github.com/ulyssa/modalkit"
readme = "README.md"
description = "A library for building applications that use modal editing"
license = "Apache-2.0"
exclude = [".github", "CONTRIBUTING.md"]
keywords = ["modal", "readline", "tui", "vim"]
categories = ["command-line-interface", "text-editors"]

[features]
default = ["readline", "widgets"]
readline = ["intervaltree"]
widgets = ["tui", "intervaltree"]

[dependencies]
anymap2 = "0.13.0"
arboard = "3.2.0"
derive_more = "0.99.16"
thiserror = "^1.0.37"
crossterm = "0.25"
libc = "0.2"
tui = { version = "0.19", optional = true }
intervaltree = { version = "0.2.6", optional = true }
bitflags = "1.2"
nom = "7.0.0"
radix_trie = "0.2.1"
regex = "^1.5"
ropey = "1.5.0"
unicode-segmentation = "^1.7"

[dev-dependencies]
rand = "0.8.4"
temp-dir = "0.1.11"
