[workspace]
members = [ "crates/*" ]
default-members = [ "crates/*" ]
resolver = "2"

[workspace.package]
authors = ["Ulyssa <git@ulyssa.dev>"]
repository = "https://github.com/ulyssa/modalkit"
license = "Apache-2.0"
edition = "2018"
rust-version = "1.67"

[workspace.dependencies.keybindings]
path = "crates/keybindings"
version = "0.0.1"

[workspace.dependencies.modalkit]
path = "crates/modalkit"
version = "0.0.18"

[workspace.dependencies]
bitflags = "2.4.2"
crossterm = "0.27"
intervaltree = { version = "0.2.6" }
libc = "0.2"
rand = "0.8.4"
regex = "^1.5"
temp-dir = "0.1.11"
thiserror = "^1.0.37"
unicode-segmentation = "^1.7"
unicode-width = "0.1.10"
