[workspace]
members = [ "crates/*" ]
default-members = [ "crates/*" ]
resolver = "2"

[workspace.package]
authors = ["Ulyssa <git@ulyssa.dev>"]
repository = "https://github.com/ulyssa/modalkit"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.74"

[workspace.dependencies.editor-types]
path = "crates/editor-types"
version = "0.0.2"

[workspace.dependencies.keybindings]
path = "crates/keybindings"
version = "0.0.2"

[workspace.dependencies.editor-types-parser]
path = "crates/editor-types-parser"
version = "0.0.2"

[workspace.dependencies.editor-types-macros]
path = "crates/editor-types-macros"
version = "0.0.2"

[workspace.dependencies.modalkit]
path = "crates/modalkit"
version = "0.0.24"

[workspace.dependencies]
bitflags = "2.4.2"
crossterm = "0.29"
intervaltree = { version = "0.2.6" }
libc = "0.2"
nom = "7.0.0"
rand = "0.8.4"
regex = "^1.5"
temp-dir = "0.1.11"
thiserror = "^1.0.37"
unicode-segmentation = "^1.7"
unicode-width = "0.1.10"

# Allow some overly pedantic warnings.
[workspace.lints.clippy]
bool_assert_comparison = "allow"
bool_to_int_with_if = "allow"
field_reassign_with_default = "allow"
len_without_is_empty = "allow"
manual_range_contains = "allow"
match_like_matches_macro = "allow"
needless_return = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
