[package]
name = "editor-types-macros"
version = "0.0.1"
homepage = "https://github.com/ulyssa/modalkit/tree/main/crates/editor-types-macros"
readme = "README.md"
description = "A library for parsing the editor-types action syntax"
exclude = [".github", "CONTRIBUTING.md"]
keywords = []
categories = ["text-editors"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
editor-types-parser = { workspace = true }
nom = { workspace = true }
proc-macro2 = "^1.0.75"
quote = "1.0"
syn = { version = "2.0.49", features = ["full"] }
