[package]
name = "editor-types-parser"
version = "0.0.2"
homepage = "https://github.com/ulyssa/modalkit/tree/main/crates/editor-types-parser"
readme = "README.md"
description = "Procedural macros for generating editor-types values at compile time"
exclude = [".github", "CONTRIBUTING.md"]
keywords = []
categories = ["text-editors"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nom = { workspace = true }
thiserror = "1.0.57"
