[package]
name = "scansion"
version = "0.0.2"
homepage = "https://github.com/ulyssa/modalkit/tree/main/crates/scansion"
description = "A readline-style library with Vim and Emacs keybindings"
keywords = ["modal", "readline", "vim", "emacs"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = { workspace = true }
libc = { workspace = true }
modalkit = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
